--- a/nishants.site/style/top_bar.scss
+++ b/nishants.site/style/top_bar.scss
@@ -47,9 +47,9 @@ $topBarHeight: $profile_pic_size/2;
   .contact{
     position: absolute;
     bottom: $padding * 1.5;
-    right : $padding;
+    right : 0px;
     text-align: right;
-    padding: 0px $padding;
+    padding: 0px $side_padding;
     width: 100%;
     @extend .top-bar-transition;
     .twitter.link, .linkedin.link{
